--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@ tr:nth-child(even) { background: #222; }
 </head>
 <body>
 
-<h1>Users Table</h1>
+<h1>Users Table 2</h1>
 <table id="usersTable">
   <thead>
     <tr>
@@ -33,7 +33,7 @@ tr:nth-child(even) { background: #222; }
 
 <script>
 const SUPABASE_URL = 'https://aforyattbmwcafvtgnry.supabase.co';
-const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFmb3J5YXR0Ym13Y2FmdnRnbnJ5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjcwMDMxMDMsImV4cCI6MjA4MjU3OTEwM30.1kq2-0rxukjO-OevldWSFod-6FfcZmOP7NEa517WEW0';
+const SUPABASE_ANON_KEY = 'sb_publishable_p16iKxaLD9u2tdWAYhitpg_-X4rvsts';
 
 const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
