--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@ tr:nth-child(even) { background: #222; }
 </head>
 <body>
 
-<h1>Users Table 2</h1>
+<h1>Users//Table</h1>
 <table id="usersTable">
   <thead>
     <tr>
