--- a/user.html
+++ b/user.html
@@ -16,7 +16,7 @@ tr:nth-child(even) { background: #222; }
 </head>
 <body>
 
-<h1>Users Table</h1>
+<h1>Users Tableo</h1>
 <div id="errorContainer" class="error"></div>
 <table id="usersTable">
   <thead>
